[package]
name = "ping-fox"
version = "0.0.1"
edition = "2021"
description = "A ping (ICMP) library - simple to use and no root or setuid required."
license = "BSD-3-Clause"
homepage = "https://github.com/rng-dynamics/ping-fox"
repository = "https://github.com/rng-dynamics/ping-fox"
readme = "README.md"
keywords = ["ping", "icmp"]
categories = ["network-programming"]

[dependencies]
pnet_packet = "0.31"
rand = "0.8"
socket2 = { version = "0.4", features = ["all"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.63"
cargo-emit = "0.2"

[dev-dependencies]
more-asserts = "0.3"
argh = "0.1"
